feat: enable sorting in job applications retrieval endpoint
